--- a/anatel.ipynb
+++ b/anatel.ipynb
@@ -1397,6 +1397,260 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 241,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## 7. Emmpresa com o maior numero de reclamaçoes novas e reclamaçoes reabertas.\n",
+    "\n",
+    "recl_novas = df_anatel[df_anatel['Condicao']=='Nova']\n",
+    "recl_reabertas = df_anatel[df_anatel['Condicao']=='Reaberta']\n",
+    "recl_reenc = df_anatel[df_anatel['Condicao']=='Reencaminhada']\n",
+    "\n",
+    "\n",
+    "dic_rec = {'Novas':recl_novas['GrupoEconNorm'].value_counts(),\n",
+    "           'Reabertas':recl_reabertas['GrupoEconNorm'].value_counts(),\n",
+    "           'Reencaminhada':recl_reenc['GrupoEconNorm'].value_counts()}\n",
+    "\n",
+    "df_recl = pd.DataFrame(data=dic_rec)\n",
+    "df_recl = df_recl.fillna(0).astype('int64')\n",
+    "df_recl['Total'] = df_recl.sum(axis=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 246,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Novas</th>\n",
+       "      <th>Reabertas</th>\n",
+       "      <th>Reencaminhada</th>\n",
+       "      <th>Total</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>OI</th>\n",
+       "      <td>353163</td>\n",
+       "      <td>119463</td>\n",
+       "      <td>26964</td>\n",
+       "      <td>499590</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>VIVO</th>\n",
+       "      <td>325515</td>\n",
+       "      <td>95944</td>\n",
+       "      <td>31228</td>\n",
+       "      <td>452687</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>TIM</th>\n",
+       "      <td>243994</td>\n",
+       "      <td>88122</td>\n",
+       "      <td>13909</td>\n",
+       "      <td>346025</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>CLARO</th>\n",
+       "      <td>209860</td>\n",
+       "      <td>58216</td>\n",
+       "      <td>12525</td>\n",
+       "      <td>280601</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>NET</th>\n",
+       "      <td>178625</td>\n",
+       "      <td>47532</td>\n",
+       "      <td>11540</td>\n",
+       "      <td>237697</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>SKY</th>\n",
+       "      <td>90017</td>\n",
+       "      <td>24940</td>\n",
+       "      <td>3277</td>\n",
+       "      <td>118234</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Outros</th>\n",
+       "      <td>63675</td>\n",
+       "      <td>9602</td>\n",
+       "      <td>25583</td>\n",
+       "      <td>98860</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>NEXTEL</th>\n",
+       "      <td>28863</td>\n",
+       "      <td>13169</td>\n",
+       "      <td>1642</td>\n",
+       "      <td>43674</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>ALGAR</th>\n",
+       "      <td>14933</td>\n",
+       "      <td>2296</td>\n",
+       "      <td>355</td>\n",
+       "      <td>17584</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>SERCOMTEL</th>\n",
+       "      <td>1911</td>\n",
+       "      <td>584</td>\n",
+       "      <td>83</td>\n",
+       "      <td>2578</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>BLUE</th>\n",
+       "      <td>920</td>\n",
+       "      <td>178</td>\n",
+       "      <td>91</td>\n",
+       "      <td>1189</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>HUGHES NET</th>\n",
+       "      <td>793</td>\n",
+       "      <td>314</td>\n",
+       "      <td>26</td>\n",
+       "      <td>1133</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Correios Celular</th>\n",
+       "      <td>491</td>\n",
+       "      <td>107</td>\n",
+       "      <td>28</td>\n",
+       "      <td>626</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Brisanet</th>\n",
+       "      <td>287</td>\n",
+       "      <td>63</td>\n",
+       "      <td>14</td>\n",
+       "      <td>364</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>CABO TELECOM</th>\n",
+       "      <td>221</td>\n",
+       "      <td>45</td>\n",
+       "      <td>2</td>\n",
+       "      <td>268</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>NOSSA TV - BRASIL</th>\n",
+       "      <td>45</td>\n",
+       "      <td>17</td>\n",
+       "      <td>0</td>\n",
+       "      <td>62</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>EMBRATEL</th>\n",
+       "      <td>24</td>\n",
+       "      <td>5</td>\n",
+       "      <td>1</td>\n",
+       "      <td>30</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Datora</th>\n",
+       "      <td>14</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>16</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                    Novas  Reabertas  Reencaminhada   Total\n",
+       "OI                 353163     119463          26964  499590\n",
+       "VIVO               325515      95944          31228  452687\n",
+       "TIM                243994      88122          13909  346025\n",
+       "CLARO              209860      58216          12525  280601\n",
+       "NET                178625      47532          11540  237697\n",
+       "SKY                 90017      24940           3277  118234\n",
+       "Outros              63675       9602          25583   98860\n",
+       "NEXTEL              28863      13169           1642   43674\n",
+       "ALGAR               14933       2296            355   17584\n",
+       "SERCOMTEL            1911        584             83    2578\n",
+       "BLUE                  920        178             91    1189\n",
+       "HUGHES NET            793        314             26    1133\n",
+       "Correios Celular      491        107             28     626\n",
+       "Brisanet              287         63             14     364\n",
+       "CABO TELECOM          221         45              2     268\n",
+       "NOSSA TV - BRASIL      45         17              0      62\n",
+       "EMBRATEL               24          5              1      30\n",
+       "Datora                 14          0              2      16"
+      ]
+     },
+     "execution_count": 246,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_recl.sort_values(by='Total',ascending=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 240,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "ALGAR                 17584\n",
+       "BLUE                   1189\n",
+       "Brisanet                364\n",
+       "CABO TELECOM            268\n",
+       "CLARO                280601\n",
+       "Correios Celular        626\n",
+       "Datora                   16\n",
+       "EMBRATEL                 30\n",
+       "HUGHES NET             1133\n",
+       "NET                  237697\n",
+       "NEXTEL                43674\n",
+       "NOSSA TV - BRASIL        62\n",
+       "OI                   499590\n",
+       "Outros                98860\n",
+       "SERCOMTEL              2578\n",
+       "SKY                  118234\n",
+       "TIM                  346025\n",
+       "VIVO                 452687\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 240,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_recl.sum(axis=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
