Colocando porcentage intem 7

--- a/anatel.ipynb
+++ b/anatel.ipynb
@@ -1396,17 +1396,21 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 7. Emmpresa com o maior numero de reclamaçoes novas e reclamaçoes reabertas."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 241,
+   "execution_count": 275,
    "metadata": {},
    "outputs": [],
    "source": [
-    "## 7. Emmpresa com o maior numero de reclamaçoes novas e reclamaçoes reabertas.\n",
-    "\n",
     "recl_novas = df_anatel[df_anatel['Condicao']=='Nova']\n",
     "recl_reabertas = df_anatel[df_anatel['Condicao']=='Reaberta']\n",
     "recl_reenc = df_anatel[df_anatel['Condicao']=='Reencaminhada']\n",
-    "\n",
     "\n",
     "dic_rec = {'Novas':recl_novas['GrupoEconNorm'].value_counts(),\n",
     "           'Reabertas':recl_reabertas['GrupoEconNorm'].value_counts(),\n",
@@ -1414,12 +1418,14 @@
     "\n",
     "df_recl = pd.DataFrame(data=dic_rec)\n",
     "df_recl = df_recl.fillna(0).astype('int64')\n",
-    "df_recl['Total'] = df_recl.sum(axis=1)"
+    "df_recl['Total'] = df_recl.sum(axis=1)\n",
+    "df_recl['% do Total'] = (df_recl['Total'] / df_recl['Total'].sum())*100\n",
+    "df_recl['% do Total'] = round(df_recl['% do Total'],3)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 246,
+   "execution_count": 276,
    "metadata": {},
    "outputs": [
     {
@@ -1447,6 +1453,7 @@
        "      <th>Reabertas</th>\n",
        "      <th>Reencaminhada</th>\n",
        "      <th>Total</th>\n",
+       "      <th>% do Total</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -1456,6 +1463,7 @@
        "      <td>119463</td>\n",
        "      <td>26964</td>\n",
        "      <td>499590</td>\n",
+       "      <td>23.776</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>VIVO</th>\n",
@@ -1463,6 +1471,7 @@
        "      <td>95944</td>\n",
        "      <td>31228</td>\n",
        "      <td>452687</td>\n",
+       "      <td>21.544</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>TIM</th>\n",
@@ -1470,6 +1479,7 @@
        "      <td>88122</td>\n",
        "      <td>13909</td>\n",
        "      <td>346025</td>\n",
+       "      <td>16.468</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>CLARO</th>\n",
@@ -1477,6 +1487,7 @@
        "      <td>58216</td>\n",
        "      <td>12525</td>\n",
        "      <td>280601</td>\n",
+       "      <td>13.354</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>NET</th>\n",
@@ -1484,6 +1495,7 @@
        "      <td>47532</td>\n",
        "      <td>11540</td>\n",
        "      <td>237697</td>\n",
+       "      <td>11.312</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>SKY</th>\n",
@@ -1491,6 +1503,7 @@
        "      <td>24940</td>\n",
        "      <td>3277</td>\n",
        "      <td>118234</td>\n",
+       "      <td>5.627</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Outros</th>\n",
@@ -1498,6 +1511,7 @@
        "      <td>9602</td>\n",
        "      <td>25583</td>\n",
        "      <td>98860</td>\n",
+       "      <td>4.705</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>NEXTEL</th>\n",
@@ -1505,6 +1519,7 @@
        "      <td>13169</td>\n",
        "      <td>1642</td>\n",
        "      <td>43674</td>\n",
+       "      <td>2.079</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>ALGAR</th>\n",
@@ -1512,6 +1527,7 @@
        "      <td>2296</td>\n",
        "      <td>355</td>\n",
        "      <td>17584</td>\n",
+       "      <td>0.837</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>SERCOMTEL</th>\n",
@@ -1519,6 +1535,7 @@
        "      <td>584</td>\n",
        "      <td>83</td>\n",
        "      <td>2578</td>\n",
+       "      <td>0.123</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>BLUE</th>\n",
@@ -1526,6 +1543,7 @@
        "      <td>178</td>\n",
        "      <td>91</td>\n",
        "      <td>1189</td>\n",
+       "      <td>0.057</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>HUGHES NET</th>\n",
@@ -1533,6 +1551,7 @@
        "      <td>314</td>\n",
        "      <td>26</td>\n",
        "      <td>1133</td>\n",
+       "      <td>0.054</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Correios Celular</th>\n",
@@ -1540,6 +1559,7 @@
        "      <td>107</td>\n",
        "      <td>28</td>\n",
        "      <td>626</td>\n",
+       "      <td>0.030</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Brisanet</th>\n",
@@ -1547,6 +1567,7 @@
        "      <td>63</td>\n",
        "      <td>14</td>\n",
        "      <td>364</td>\n",
+       "      <td>0.017</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>CABO TELECOM</th>\n",
@@ -1554,6 +1575,7 @@
        "      <td>45</td>\n",
        "      <td>2</td>\n",
        "      <td>268</td>\n",
+       "      <td>0.013</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>NOSSA TV - BRASIL</th>\n",
@@ -1561,6 +1583,7 @@
        "      <td>17</td>\n",
        "      <td>0</td>\n",
        "      <td>62</td>\n",
+       "      <td>0.003</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>EMBRATEL</th>\n",
@@ -1568,6 +1591,7 @@
        "      <td>5</td>\n",
        "      <td>1</td>\n",
        "      <td>30</td>\n",
+       "      <td>0.001</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Datora</th>\n",
@@ -1575,78 +1599,41 @@
        "      <td>0</td>\n",
        "      <td>2</td>\n",
        "      <td>16</td>\n",
+       "      <td>0.001</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                    Novas  Reabertas  Reencaminhada   Total\n",
-       "OI                 353163     119463          26964  499590\n",
-       "VIVO               325515      95944          31228  452687\n",
-       "TIM                243994      88122          13909  346025\n",
-       "CLARO              209860      58216          12525  280601\n",
-       "NET                178625      47532          11540  237697\n",
-       "SKY                 90017      24940           3277  118234\n",
-       "Outros              63675       9602          25583   98860\n",
-       "NEXTEL              28863      13169           1642   43674\n",
-       "ALGAR               14933       2296            355   17584\n",
-       "SERCOMTEL            1911        584             83    2578\n",
-       "BLUE                  920        178             91    1189\n",
-       "HUGHES NET            793        314             26    1133\n",
-       "Correios Celular      491        107             28     626\n",
-       "Brisanet              287         63             14     364\n",
-       "CABO TELECOM          221         45              2     268\n",
-       "NOSSA TV - BRASIL      45         17              0      62\n",
-       "EMBRATEL               24          5              1      30\n",
-       "Datora                 14          0              2      16"
+       "                    Novas  Reabertas  Reencaminhada   Total  % do Total\n",
+       "OI                 353163     119463          26964  499590      23.776\n",
+       "VIVO               325515      95944          31228  452687      21.544\n",
+       "TIM                243994      88122          13909  346025      16.468\n",
+       "CLARO              209860      58216          12525  280601      13.354\n",
+       "NET                178625      47532          11540  237697      11.312\n",
+       "SKY                 90017      24940           3277  118234       5.627\n",
+       "Outros              63675       9602          25583   98860       4.705\n",
+       "NEXTEL              28863      13169           1642   43674       2.079\n",
+       "ALGAR               14933       2296            355   17584       0.837\n",
+       "SERCOMTEL            1911        584             83    2578       0.123\n",
+       "BLUE                  920        178             91    1189       0.057\n",
+       "HUGHES NET            793        314             26    1133       0.054\n",
+       "Correios Celular      491        107             28     626       0.030\n",
+       "Brisanet              287         63             14     364       0.017\n",
+       "CABO TELECOM          221         45              2     268       0.013\n",
+       "NOSSA TV - BRASIL      45         17              0      62       0.003\n",
+       "EMBRATEL               24          5              1      30       0.001\n",
+       "Datora                 14          0              2      16       0.001"
       ]
      },
-     "execution_count": 246,
+     "execution_count": 276,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "df_recl.sort_values(by='Total',ascending=False)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 240,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "ALGAR                 17584\n",
-       "BLUE                   1189\n",
-       "Brisanet                364\n",
-       "CABO TELECOM            268\n",
-       "CLARO                280601\n",
-       "Correios Celular        626\n",
-       "Datora                   16\n",
-       "EMBRATEL                 30\n",
-       "HUGHES NET             1133\n",
-       "NET                  237697\n",
-       "NEXTEL                43674\n",
-       "NOSSA TV - BRASIL        62\n",
-       "OI                   499590\n",
-       "Outros                98860\n",
-       "SERCOMTEL              2578\n",
-       "SKY                  118234\n",
-       "TIM                  346025\n",
-       "VIVO                 452687\n",
-       "dtype: int64"
-      ]
-     },
-     "execution_count": 240,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df_recl.sum(axis=1)"
    ]
   },
   {
