--- a/anatel.ipynb
+++ b/anatel.ipynb
@@ -44,11 +44,7 @@
    "source": [
     "#importando as bibliotecas\n",
     "import numpy as np\n",
-    "import pandas as pd\n",
-    "\n",
-    "import matplotlib.pyplot as plt\n",
-    "import seaborn as sns\n",
-    "%matplotlib inline"
+    "import pandas as pd"
    ]
   },
   {
